--- a/frontend/src/assets/styles/styles.scss
+++ b/frontend/src/assets/styles/styles.scss
@@ -296,6 +296,10 @@ a:hover {
 	.wc-detail {
 		font-size: 14px !important;
 	}
+
+	main {
+		margin-top: 72px !important;
+	}
 }
 
 img {
